force-app/main/default/objects/EmploymentWebsite__c/EmploymentWebsite__c.object-meta.xml
<CustomObject>
    <description>Information about a particular employment website.</description>
    <label>Employment Website</label>
    <nameField>
        <label>Employment Website Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EmploymentWebsites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>