force-app/main/default/objects/EmploymentWebsite__c/fields/MaximumBudget__c.field-meta.xml
<CustomField>
    <fullName>MaximumBudget__c</fullName>
    <label>Maximum Budget</label>
    <precision>8</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>