force-app/main/default/objects/EmploymentWebsite__c/fields/PricePerPost__c.field-meta.xml
<CustomField>
    <fullName>PricePerPost__c</fullName>
    <label>Price per Post</label>
    <precision>7</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>