force-app/main/default/objects/EmploymentWebsite__c/fields/WebAddress__c.field-meta.xml
<CustomField>
    <fullName>WebAddress__c</fullName>
    <label>Web Address</label>
    <required>true</required>
    <type>Url</type>
</CustomField>