force-app/main/default/objects/EmploymentWebsite__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OWNER.ALIAS</columns>
    <columns>PricePerPost__c</columns>
    <columns>MaximumBudget__c</columns>
    <columns>NAME</columns>
    <columns>WebAddress__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>